--- a/index.html
+++ b/index.html
@@ -10,53 +10,89 @@
       rel="stylesheet"
       href="output.css"
     />
-    <title>poke-card-generator</title>
+    <title>PokéCard Generator</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body
-    class="bg-gray-900 text-white min-h-screen flex flex-col items-center p-4"
+    class="bg-slate-900 text-white min-h-screen font-['Montserrat'] flex flex-col items-center p-6"
   >
     <!-- Header -->
-    <header class="mb-6 text-center">
-      <h1 class="text-4xl font-bold mb-2">Pokémon Card Generator</h1>
-      <p class="text-gray-400">Catch random Pokémon & save your favorites!</p>
+    <header class="mb-10 text-center">
+      <h1
+        class="text-5xl font-bold mb-3 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent"
+      >
+        PokéCard
+      </h1>
+      <p class="text-slate-400 text-lg">
+        Discover and collect your favorite Pokémon
+      </p>
     </header>
 
     <!-- Control Buttons -->
-    <div class="flex gap-4 mb-8">
+    <div class="flex gap-4 mb-10">
       <button
         id="generate"
-        class="bg-yellow-400 text-black px-4 py-2 rounded hover:bg-yellow-300 transition"
+        class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white px-6 py-3 rounded-xl font-medium shadow-lg hover:shadow-indigo-500/20 hover:from-indigo-600 hover:to-purple-700 transition-all duration-300 transform hover:-translate-y-1"
       >
         Generate Pokémon
       </button>
       <button
         id="clear-favorites"
-        class="bg-red-500 px-4 py-2 rounded hover:bg-red-400 transition"
+        class="bg-slate-700 px-6 py-3 rounded-xl font-medium shadow-lg hover:shadow-slate-500/20 hover:bg-slate-600 transition-all duration-300 transform hover:-translate-y-1"
       >
         Clear Favorites
       </button>
     </div>
 
-    <!-- Pokémon Card Display -->
-    <main class="flex flex-col items-center gap-6 w-full max-w-md">
-      <section
-        id="pokemon-card"
-        class="w-full"
-      ></section>
+    <!-- Main Container -->
+    <main class="w-full max-w-5xl mx-auto">
+      <!-- Content Wrapper -->
+      <div class="flex flex-col lg:flex-row gap-8">
+        <!-- Pokémon Card Display Section -->
+        <section class="lg:w-2/5 flex justify-center">
+          <div
+            id="pokemon-card"
+            class="w-full max-w-md"
+          ></div>
+        </section>
 
-      <!-- Favorites Section -->
-      <section
-        id="favorites"
-        class="w-full"
-      >
-        <h2 class="text-2xl mb-4 border-b border-gray-700 pb-2">
-          Favorite Pokémon
-        </h2>
-        <div
-          id="favorite-cards"
-          class="grid grid-cols-2 gap-4"
-        ></div>
-      </section>
+        <!-- Favorites Section -->
+        <section
+          id="favorites"
+          class="lg:w-3/5 bg-slate-800/50 rounded-2xl p-6 backdrop-blur-sm shadow-xl h-min"
+        >
+          <h2
+            class="text-2xl font-semibold mb-6 pb-3 border-b border-slate-700 flex items-center"
+          >
+            <span
+              class="bg-gradient-to-r from-indigo-500 to-purple-500 bg-clip-text text-transparent"
+              >Favorite Pokémon</span
+            >
+          </h2>
+          <div
+            id="favorite-cards"
+            class="grid grid-cols-1 sm:grid-cols-2 gap-5"
+          >
+            <div
+              class="empty-state text-center p-8 col-span-2 text-slate-500 italic"
+            >
+              Generate and save Pokémon to see them here
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
     <script src="script.js"></script>
   </body>
