--- a/index.html
+++ b/index.html
@@ -24,6 +24,36 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <style>
+      /* Animation styles */
+      .animate-scaleIn {
+        animation: scaleIn 0.3s ease-out forwards;
+      }
+
+      .animate-fadeOut {
+        animation: fadeOut 0.3s ease-out forwards;
+      }
+
+      @keyframes scaleIn {
+        from {
+          transform: scale(0.9);
+          opacity: 0;
+        }
+        to {
+          transform: scale(1);
+          opacity: 1;
+        }
+      }
+
+      @keyframes fadeOut {
+        from {
+          opacity: 1;
+        }
+        to {
+          opacity: 0;
+        }
+      }
+    </style>
   </head>
   <body
     class="bg-slate-900 text-white min-h-screen font-['Montserrat'] flex flex-col items-center p-6"
