--- a/LegacyVersion/index.html
+++ b/LegacyVersion/index.html
@@ -63,7 +63,7 @@
       <h1
         class="text-5xl font-bold mb-3 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 bg-clip-text text-transparent"
       >
-        PokéCard
+        Route-151
       </h1>
       <p class="text-slate-400 text-lg">
         Discover and collect your favorite Pokémon
